# cccad-brep

./: .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml  reload.sh
include/cccad/geometry/: artifact_writer.hpp  boolean_builder.hpp  edge_modifier_builder.hpp  extrude_builder.hpp  geometry_service.hpp  hole_builder.hpp  pattern_builder.hpp  topology_builder.hpp  types.hpp
proto/: geometry_kernel.proto
src/: artifact_writer.cpp  boolean_builder.cpp  edge_modifier_builder.cpp  extrude_builder.cpp  geometry_service.cpp  hole_builder.cpp  main.cpp  pattern_builder.cpp  topology_builder.cpp
